--- a/SuporteMedico.dproj
+++ b/SuporteMedico.dproj
@@ -6,7 +6,7 @@
         <MainSource>SuporteMedico.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Win64</Platform>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>37983</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
@@ -394,6 +394,7 @@
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <Icon_MainIcon>SuporteMedico_Icon2.ico</Icon_MainIcon>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
@@ -446,6 +447,10 @@
         </DCCReference>
         <DCCReference Include="UModelo.pas">
             <Form>FModelo</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
+        <DCCReference Include="UPaciente.pas">
+            <Form>FPaciente</Form>
             <FormType>fmx</FormType>
         </DCCReference>
         <None Include="ModelSupport_SuporteMedico\default.txaPackage"/>
